--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
+				<section data-background="lib/img/ghost-bg.jpg">
+					<h1>Ghost</h1>
+          <h2>Up and Running</h2>
 				</section>
 
-				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+        <section>
+          <h2>Hi. I'm Matt.</h2>
+          <img class="round" src="lib/img/me.jpg">
+          <h3>Programmer.</h3>
+          <p>Github: <a href="http://github.com/mattfield">mattfield</a></p>
+          <p>Twitter: <a href="http://twitter.com/mattfieldy">@mattfieldy</a></p>
+        </section>
 
+				<section>
+          <h2>What is Ghost?</h2>
+          <h3 class="fragment">"Just a blogging platform".</h3>
+          <h3 class="fragment">Free. Open-source. Simple to use.</h3>
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+						
 					</aside>
 				</section>
 
@@ -361,12 +363,13 @@ function linkify( selector ) {
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: true,
-				progress: true,
+				progress: false,
 				history: true,
 				center: true,
+        backgroundTransition: 'slide',
 
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				theme: Reveal.getQueryHash().theme || 'night', // available themes are in /css/theme
+				transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
