adds ghost logo to home slide
	modified:   css/theme/night.css
	modified:   index.html
	new file:   lib/img/blogging.jpg
new file:   lib/img/logo.png

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-background="lib/img/ghost-bg.jpg">
-					<h1>Ghost</h1>
+					<h1 class="logo">Ghost</h1>
           <h2>Up and Running</h2>
 				</section>
 
@@ -50,9 +50,13 @@
         </section>
 
 				<section>
-          <h2>What is Ghost?</h2>
-          <h3 class="fragment">"Just a blogging platform".</h3>
-          <h3 class="fragment">Free. Open-source. Simple to use.</h3>
+          <section>
+            <h2>What is Ghost?</h2>
+          </section>
+          <section data-background="lib/img/blogging.jpg">
+            <h2>"Just a blogging platform"</h2>
+            <h3 class="fragment">Free. Open-source. Simple to use.</h3>
+          </section>
 					<aside class="notes">
 						
 					</aside>
