--- a/index.html
+++ b/index.html
@@ -222,25 +222,55 @@
           </section>
         </section>
         <section>
-          <h2 class="monospace">localhost</h2>
+          <h2 class="monospace">localhost:2368</h2>
           <img src="lib/img/download.png">
           <aside class="notes">
             * Create an account on Ghost
             * Download the source code .zip folder
             * Run npm install with a production flag, npm start, you're good to go
+            * Manually deploy to something like a cloud server on EC2, DigitalOcean,
+            Rackspace, a VPS like Webfaction or Dreamhost or
+            practically anything that has SSH access and will allow you to 
+            install Node (though unfortunately neither Nodejitsu nor Heroku
+            currently compatible. Work at first...but then kill your database)
           </aside>
         </section>
         <section>
           <h2>One-click installations</h2>
           <aside class="notes">
-            
+            * One-click installations on Bitnami, Rackspace and DigitalOcean (which is
+            actually the one I used, see in a minute)
           </aside>
         </section>
         <section>
           <h2>Ghost hosted service</h2>
-          <img class="" src="lib/img/hosted.png">
+          <img class="fragment" src="lib/img/hosted.png">
+          <aside class="notes">
+            * Hosted service...but not yet
+            * Post went up end of last week and it's being rolled out to users slowly
+            * Pricing also went up at $5 a month for one blog, up to something like
+            $80 a month for 30 blogs
+            * There will be a cap on number of view per plan
+            * BUT a way of looking at it is that the hosted plans will be the main
+            source of funding for Ghost. It's a way of contributing to the project.
+          </aside>
         </section>
-				
+
+        <section>
+          <h1>Live Demo!</h1>
+        </section>
+
+        <section data-background="lib/img/ghost-guide.png">
+          <aside class="notes">
+            * So that's a whistlestop tour of Ghost and it's interface.
+            * Hopefully you'll go and check Ghost out for yourself
+          </aside>
+        </section>
+
+        <section>
+          <h1>Thanks!</h1>
+          <p><a href="http://mattfield.me">mattfield.me</a></p>
+        </section>
 			</div>
 
 		</div>
