--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>Ghost: Up and Running</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Ghost: Up and Running">
+		<meta name="author" content="Matt Field">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -56,9 +56,7 @@
           <aside class="notes" data-markdown>
             * By means of a quick intro...
             * Slightly dorky picture...!
-            * Programmer: use that in a fairly broad sense and maybe in a slightly ironic way
-            as some find it a derogatory simplication of a specific field of development.
-            Saying that: primarily develop for the web.
+            * Programmer - primarily for the web
           </aside>
         </section>
 
