updates slides for Ghost 0.4
	modified:   index.html
	modified:   lib/img/download.png
	deleted:    lib/img/hosted.png
	new file:   lib/img/start.png

--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
         </section>
         <section>
           <h2>Ghost hosted service</h2>
-          <img class="fragment" src="lib/img/hosted.png">
+          <img src="lib/img/start.png">
           <aside class="notes">
-            * Hosted service...but not yet
-            * Post went up end of last week and it's being rolled out to users slowly
-            * Pricing also went up at $5 a month for one blog, up to something like
+            * Hosted service
+            * Rolled out over Christmas
+            * Pricing $5 a month for one blog, up to something like
             $80 a month for 30 blogs
             * There will be a cap on number of view per plan
             * BUT a way of looking at it is that the hosted plans will be the main
@@ -267,7 +267,7 @@
 
         <section>
           <h1>Thanks!</h1>
-          <p><a href="http://mattfield.me">mattfield.me</a></p>
+          <p><a href="http://mattfield.github.io">mattfield.github.io</a></p>
         </section>
 			</div>
 
